# stable-platform

./: .env.contracts  .env.example  .gitignore  .gitmodules  Makefile  biome.json  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vitest.config.ts
.github/: dependabot.yml
claudedocs/: 00-INDEX.md  01-DEFI-POOL.md  02-MERCHANT-DASHBOARD.md  03-MARKETPLACE-REGISTRY.md  04-TX-SPEEDUP-CANCEL.md  05-BATCH-TRANSACTIONS.md  06-FIAT-ONRAMP.md  07-STAKING-LENDING.md  08-SMART-ACCOUNT-TX-ANALYSIS.md  09-PAYMASTER-GAS-FLOW-ANALYSIS.md  10-IMPLEMENTATION-PLAN.md
docs/: ASSET_MANAGEMENT_IMPLEMENTATION.md  CODE_REVIEW_REPORT.md  DOCS_AUDIT_AND_CLEANUP_PLAN_2026-03-02.md  EIP7702_Subscription_Implementation_Plan.md  ERC7579_SUPPORTED_PROJECTS.md  PROJECT_ANALYSIS.md  Q.md  README.md  REMAINING_TASKS.md  Ref-Module.md  SCORING_CRITERIA.md  (+11 more)
services/stealth-server/: .env.example  Cargo.toml  Dockerfile  go.mod  go.sum  package.json
services/stealth-server/cmd/: main.go
services/stealth-server/migrations/: 001_initial.sql  002_performance_indexes.sql
services/stealth-server/src/: lib.rs  main.rs
services/stealth-server/src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
services/stealth-server/src/config/: mod.rs
services/stealth-server/src/domain/: mod.rs  registry.rs  stealth.rs
services/stealth-server/src/parser/: announcement.rs  mod.rs
services/stealth-server/src/storage/: postgres.rs
services/stealth-server/src/subscriber/: indexer_client.rs  mod.rs
(+1219 files in other folders)
