[package]
name = "stealth-server"
version = "0.1.0"
edition = "2021"
description = "Stealth address server for StableNet - indexes and serves EIP-5564 stealth announcements"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4"
actix-web-actors = "4"
actix-rt = "2"
actix = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
k256 = { version = "0.13", features = ["ecdh", "arithmetic", "ecdsa"] }
sha3 = "0.10"
hex = "0.4"
elliptic-curve = "0.13"

# Ethereum types
alloy-primitives = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
rand = "0.8"

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"

[[bin]]
name = "stealth-server"
path = "src/main.rs"
